fix navbar text width on mobile

--- a/theme.css
+++ b/theme.css
@@ -71,7 +71,8 @@ a:active,
 #navigationButtons>span { color: #4f4f4f; }
 
 @media (max-width: 460px) {
-  #thePicturePage .navbar-brand {
+  #thePicturePage .navbar-brand,
+  #theCategoryPage .navbar-brand {
     height: 100%;
     width: 80%;
   }
